# osmquadtree

./: .gitignore  CMakeLists.txt  doxyconfig  example.pbf
docs/: Doxyfile  Makefile  conf.py  environment.yml  index.rst
docs/source/: calcqts.rst  conf.py  getting_started.rst  index.rst  installation.rst  mergechanges.rst  process_geometry.rst  protocol_buffer.rst  python_bindings.rst  sortblocks.rst  threaded_callbacks.rst  update.rst
example/: CMakeLists.txt  oqt_main.cpp
include/oqt/: combineblocks.hpp  common.hpp  count.hpp  minimalblock.hpp  operations.hpp  picojson.h  quadtree.hpp  quadtreegroups.hpp  readfile.hpp  readpbffile.hpp  simplepbf.hpp  sortfile.hpp  store.hpp  tempobjs.hpp  update.hpp  utils.hpp  waynodes.hpp  writeblock.hpp  writefile.hpp  writepbffile.hpp
include/oqt/calcqts/: calcqts.hpp  calcqtsinmem.hpp  calculaterelations.hpp  qtstore.hpp  qtstoresplit.hpp  qttree.hpp  qttreegroups.hpp  waynodes.hpp  waynodesfile.hpp  writeqts.hpp  writewaynodes.hpp
include/oqt/elements/: baseelement.hpp  block.hpp  combineblocks.hpp  element.hpp  geometry.hpp  header.hpp  info.hpp  member.hpp  minimalblock.hpp  node.hpp  packedblock.hpp  packedobj.hpp  quadtree.hpp  rawelement.hpp  relation.hpp  tag.hpp  way.hpp
include/oqt/geometry/: addparenttags.hpp  addwaynodes.hpp  findminzoom.hpp  geometrytypes.hpp  handlerelations.hpp  makegeometries.hpp  multipolygons.hpp  postgiswriter.hpp  process.hpp  processpostgis.hpp  utils.hpp
include/oqt/geometry/elements/: complicatedpolygon.hpp  linestring.hpp  point.hpp  ring.hpp  simplepolygon.hpp  waywithnodes.hpp
include/oqt/pbfformat/: fileblock.hpp  idset.hpp  objsidset.hpp  packedblock.hpp  packedint.hpp  protobuf.hpp  readblock.hpp  readblockscaller.hpp  readfile.hpp  readfileblocks.hpp  readfileparallel.hpp  readminimal.hpp  varint.hpp  writeblock.hpp  writepbffile.hpp
include/oqt/readpbf/: idset.hpp  packedint.hpp  protobuf.hpp
include/oqt/sortfile/: common.hpp  resortobjects.hpp  sortgroup.hpp
include/oqt/sorting/: common.hpp  final.hpp  mergechanges.hpp  qttree.hpp  qttreegroups.hpp  resortobjects.hpp  sortblocks.hpp  sortbyid.hpp  sortgroup.hpp  splitbyid.hpp  tempobjs.hpp
include/oqt/update/: applychange.hpp  update.hpp  xmlchange.hpp
include/oqt/utils/: bbox.hpp  compress.hpp  date.hpp  geometry.hpp  invertedcallback.hpp  logger.hpp  multithreadedcallback.hpp  operatingsystem.hpp  singlequeue.hpp  splitcallback.hpp  string.hpp  threadedcallback.hpp  timer.hpp  timing.hpp
include/oqt/utils/pbf/: fixedint.hpp  packedint.hpp  protobuf.hpp  protobuf_messages.hpp  varint.hpp
oqt/: Makefile
python/: setup.py  state.txt
python/oqt/: __init__.py  __main__.py  geometrystyle.py  minzoomvalues.py  postgis.py  processgeometry.py  readfile.py  update.py  utils.py  xmlchange.py
python/oqt/calcqts/: __init__.py
python/oqt/count/: __init__.py
python/oqt/elements/: __init__.py
python/oqt/geometry/: __init__.py  minzoomvalues.py  process.py  style.py
python/oqt/geometry/postgis/: __init__.py
python/oqt/pbfformat/: __init__.py  filelocs.py
python/oqt/sorting/: __init__.py
python/oqt/update/: __init__.py  misc.py
python/oqt/utils/: __init__.py  filelocs.py  misc.py
python/scripts/: oqt_initial.py  oqt_update.py
python/src/: block_python.cpp  calcqts_python.cpp  change_python.cpp  core_python.cpp  count_python.cpp  elements_python.cpp  geometry_python.cpp  oqt_python.cpp  oqt_python.hpp  pbfformat_python.cpp  postgis_python.cpp  sorting_python.cpp  update_python.cpp  utils_python.cpp
src/: CMakeLists.txt  applychange.cpp  calcqts.cpp  combineblocks.cpp  count.cpp  mergechanges.cpp  minimalblock.cpp  oqt_main.cpp  packedblock.cpp  primitivegroup.cpp  quadtree.cpp  quadtreegroups.cpp  readblock.cpp  readfile.cpp  simplepbf.cpp  sortblocks.cpp  sortfile.cpp  store.cpp  tempobjs.cpp  update.cpp  utils.cpp  waynodes.cpp  writeblock.cpp  writefile.cpp  writepbffile.cpp  xmlchange.cpp
src/calcqts/: CMakeLists.txt  calcqts.cpp  calcqtsinmem.cpp  calculaterelations.cpp  qtstore.cpp  qtstoresplit.cpp  qttree.cpp  qttreegroups.cpp  waynodes.cpp  waynodesfile.cpp  wayqts.cpp  writeqts.cpp  writewaynodes.cpp
src/elements/: CMakeLists.txt  baseelement.cpp  block.cpp  combineblocks.cpp  element.cpp  geometry.cpp  node.cpp  quadtree.cpp  relation.cpp  way.cpp
src/geometry/: CMakeLists.txt  addparenttags.cpp  addwaynodes.cpp  findminzoom.cpp  geometrytypes.cpp  handlerelations.cpp  makegeometries.cpp  multipolygons.cpp  postgiswriter.cpp  process.cpp  processpostgis.cpp  utils.cpp
src/geometry/elements/: CMakeLists.txt  complicatedpolygon.cpp  linestring.cpp  point.cpp  ring.cpp  simplepolygon.cpp  waywithnodes.cpp
src/pbfformat/: CMakeLists.txt  fileblock.cpp  objsidset.cpp  readblock.cpp  readblocknew.cpp  readblockscaller.cpp  readfile.cpp  readfileblocks.cpp  readfileparallel.cpp  readminimal.cpp  writeblock.cpp  writepbffile.cpp
src/sorting/: CMakeLists.txt  common.cpp  final.cpp  mergechanges.cpp  qttree.cpp  qttreegroups.cpp  resortobjects.cpp  sortblocks.cpp  sortgroup.cpp  splitbyid.cpp  tempobjs.cpp
src/update/: CMakeLists.txt  applychange.cpp  update.cpp  xmlchange.cpp
src/utils/: CMakeLists.txt  bbox.cpp  compress.cpp  date.cpp  geometry.cpp  logger.cpp  operatingsystem.cpp  string.cpp  timing.cpp
src/utils/pbf/: CMakeLists.txt  fixedint.cpp  packedint.cpp  protobuf.cpp  varint.cpp
